--- a/ErikStein/styles.css
+++ b/ErikStein/styles.css
@@ -1,3 +1,34 @@
 body {
     background-color: black;
+    text-align: center;
+}
+
+h1, h2, h3, p {
+    color: white;
+}
+
+.container-hero img {
+    border-radius: 50%;
+    align-items: center;
+}
+
+.container-about {
+
+}
+
+.container-work {
+    display: flex;
+    gap: 20px 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.container-work img {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+}
+
+img:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5)
 }
