--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,23 @@ img {
 
 body {
     color: white;
+    text-align: center;
+}
+
+.profile ul {
+    max-width: 30em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.profile-pic img {
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+}
+
+.profile-pic button {
+    
 }
 
 .coverUps-images img {
@@ -17,7 +34,7 @@ body {
 }
 
 .coverUps p {
-    max-width: 25em;
+    max-width: 30em;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
